--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'LikesFont';
-    src:    url('https://github.com/fercho27/test/raw/master/fonts/LikesFont.eot?anejuj');
-    src:    url('https://github.com/fercho27/test/raw/master/fonts/LikesFont.eot?anejuj#iefix') format('embedded-opentype'),
-        url('fonts/LikesFont.ttf?anejuj') format('truetype'),
-        url('fonts/LikesFont.woff?anejuj') format('woff'),
+    src:    url('https://github.com/fercho27/test/raw/master/fonts/LikesFont.eot');
+    src:    url('https://github.com/fercho27/test/raw/master/fonts/LikesFont.eot') format('embedded-opentype'),
+        url('https://raw.githubusercontent.com/fercho27/test/master/fonts/LikesFont.ttf') format('truetype'),
+        url('https://raw.githubusercontent.com/fercho27/test/master/fonts/LikesFont.woff') format('woff'),
         url('https://raw.githubusercontent.com/fercho27/test/master/fonts/LikesFont.svg') format('svg');
     font-weight: normal;
     font-style: normal;
